# mkdocs-editor-notes

./: .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  index.html  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml  docs.yml  main.yml
copilot-context/: done.md  plan.md  todo.md
docs/: mkdocs.yaml
docs/source/: editor-notes.md  features.md  index.md  quickstart.md  reference.md
editor-notes/: index.html
example/: mkdocs.yml
example/docs/: deployment.md  editor-notes.md  index.md
example/docs/api/: authentication.md  harvests.md  sandworms.md
example/docs/getting-started/: installation.md  quickstart.md
example/docs/guides/: rate-limiting.md  webhooks.md
example/site/: 404.html  index.html
example/site/api/authentication/: index.html
example/site/api/harvests/: index.html
example/site/api/sandworms/: index.html
example/site/deployment/: index.html
example/site/editor-notes/: index.html
example/site/getting-started/installation/: index.html
example/site/getting-started/quickstart/: index.html
example/site/guides/rate-limiting/: index.html
example/site/guides/webhooks/: index.html
example/site/search/: search_index.json
features/: index.html
quickstart/: index.html
reference/: index.html
search/: search_index.json
src/mkdocs_editor_notes/: constants.py  manager.py  markdown_extension.py  models.py  note.py  plugin.py
src/mkdocs_editor_notes/static/: editor-notes.css  editor-notes.js
tests/: test_integration.py  test_main.py  test_manager.py  test_note.py  test_parser.py  test_plugin.py  test_version.py
